fix(config): require JWT secret, add validation, security warnings
- Remove insecure JWT secret default (empty = fail fast)
- Remove DB password default (empty = explicit config required)
- Add bounds validation: port range, max_conns >= 1, positive TTLs
- Add security comments to .env.example (SSL mode, Docker socket)
- Server refuses to start without AIRA_JWT_SECRET set

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Aira — Environment Variables
 # Copy to .env and adjust values for your environment.
+#
+# WARNING: Defaults below are for LOCAL DEVELOPMENT ONLY.
+# In production, set all security-sensitive values explicitly.
 
 # ── Database (PostgreSQL) ──────────────────────────────────────────
 AIRA_DB_HOST=localhost
@@ -7,6 +10,8 @@ AIRA_DB_PORT=5432
 AIRA_DB_USER=aira
 AIRA_DB_PASSWORD=aira
 AIRA_DB_NAME=aira_dev
+# SECURITY: Use "require" or "verify-full" in production.
+# "disable" is acceptable only for local development.
 AIRA_DB_SSLMODE=disable
 AIRA_DB_MAX_CONNS=25
 
@@ -16,7 +21,9 @@ AIRA_REDIS_PASSWORD=
 AIRA_REDIS_DB=0
 
 # ── JWT ────────────────────────────────────────────────────────────
-AIRA_JWT_SECRET=change-me-in-production
+# REQUIRED: Generate a strong secret (e.g., openssl rand -hex 32).
+# The server will refuse to start if this is empty.
+AIRA_JWT_SECRET=
 AIRA_JWT_ACCESS_TTL=15m
 AIRA_JWT_REFRESH_TTL=168h
 
@@ -31,6 +38,8 @@ AIRA_SLACK_SIGNING_SECRET=your-signing-secret
 AIRA_SLACK_APP_TOKEN=xapp-your-app-token
 
 # ── Docker (Agent Containers) ─────────────────────────────────────
+# SECURITY: Docker socket grants host-level access. In production,
+# use a remote Docker host or rootless Docker instead.
 AIRA_DOCKER_HOST=unix:///var/run/docker.sock
 AIRA_DOCKER_IMAGE_DEFAULT=ghcr.io/gosuda/aira-agent:latest
 AIRA_DOCKER_CPU_LIMIT=2
