refactor: migrate log.Printf to log/slog structured logging
Replace all 22 log.Printf/Println/Fatalf call sites with log/slog
structured logging across 6 files.

- Add slog initialization in main.go with configurable level and format
  via AIRA_LOG_LEVEL (debug/info/warn/error) and AIRA_LOG_FORMAT
  (json/text) environment variables. JSON is the default for
  production log aggregator compatibility.
- Use appropriate log levels: Info for lifecycle events, Error for
  failures, Warn for non-critical issues, Debug for noisy WebSocket
  write errors during client disconnect.
- All messages use structured key-value pairs instead of format strings.
- Update .env.example with new logging variables.

--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,9 @@ AIRA_DOCKER_IMAGE_DEFAULT=ghcr.io/gosuda/aira-agent:latest
 AIRA_DOCKER_CPU_LIMIT=2
 AIRA_DOCKER_MEM_LIMIT=2g
 
+# ── Logging ───────────────────────────────────────────────────────
+AIRA_LOG_LEVEL=info     # debug, info, warn, error
+AIRA_LOG_FORMAT=json    # json, text
+
 # ── Self-Hosted Mode ──────────────────────────────────────────────
 AIRA_SELF_HOSTED=false
